<resources>

    <string name="app_name">Sharing Book</string>
	<string name="action_settings">Settings</string>
	<string name="settings">Settings</string>
    <string name="back">back</string>

	<string name="help">Help</string>
	<string name="about">About</string>
	<string name="version">Version:</string>
	<string name="register">register</string>
	<string name="login">login</string>
	<string name="connect">connect</string>
	<string name="address">address:</string>
	<string name="start">马上进入</string>
	<!-- next is mine -->
	<string name="welcomeFido">Welcome to use FIDO Service</string>
	<string name="generate_dimension">Generate two-dimensional code</string>
	<string name="my_dimension">My two-dimensional code</string>
	<string name="open_wifi">open wifi</string>
	<string name="noConnected">no Connected</string>
	<string name="wifiConnect">wifi connect to</string>
	<string name="connectStatusOk">wifi connected success</string>
	<string name="connectStatusFalse">wifi connected failure</string>
	
	<!-- welcome -->
	<string name="welcome_we_know">As your know</string>
	<string name="welcome_channel_Password">Password is only one channel</string>
	<string name="welcome_trouble">Troubles us is</string>
	<string name="welcome_trouble_remember">Many already can not remember the password</string>
	<string name="welcome_scan">code scanning</string>
	<string name="welcome_surf_internet">Surf Internet</string>
	<string name="welcome_manager">Now go to manage all accounts</string>
	
	<string name="login_label_userinfo">Account Info:</string>
    <string name="login_label_register_link">No account number? <a href="#">Registered</a></string>
    <string name="login_label_continue_game">Continue</string>
    <string name="login_label_new_game">New Play</string>
    <string name="login_label_about">About</string>
    <string name="edit_name_hit">Tom</string>
    
    <!-- play game -->
    <string name="game_pts">Pts:</string>
	<string name="game_left_time">Lifetime:</string>
	<string name="game_item_name">Question </string>
	<string name="game_item_number"> #1</string>
	<string name="game_pts_value"> 00</string>
	<string name="game_left_time_value"> 00</string>
</resources>
